<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >


 <LinearLayout
        android:id="@+id/tracking_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/track_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/track_progress_status"
            android:textAppearance="?android:attr/textAppearanceMedium" />
  </LinearLayout>

  <LinearLayout
      android:id="@+id/app_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin" >

    <ListView
        android:id="@+id/listLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>
      
      <LinearLayout
          android:id="@+id/layoutT"
          android:layout_width="match_parent"
          android:layout_height="70dp"
          android:orientation="horizontal" >

          <Button
              android:id="@+id/pauseTracking"
              style="?android:attr/buttonStyleSmall"
              android:layout_width="0px"
              android:layout_height="fill_parent"
              android:layout_weight="3.5"
              android:background="@drawable/btn_yellow_holo_dark"
              android:text="@string/pauseTracking"
              android:visibility="gone" />

          <Button
              android:id="@+id/stopTracking"
              style="?android:attr/buttonStyleSmall"
              android:layout_width="0px"
              android:layout_height="fill_parent"
              android:layout_weight="3.5"
              android:background="@drawable/btn_red_holo_dark"
              android:text="@string/stopTracking"
              android:visibility="gone" />

          <Button
              android:id="@+id/startTracking"
              android:layout_width="0px"
              android:layout_height="fill_parent"
              android:layout_weight="5.72"
              android:background="@drawable/btn_blue_holo_dark"
              android:drawableStart="@drawable/traffic_lights"
              android:text="@string/startTracking" />

          <TextView
              android:id="@+id/resultView"
              android:layout_width="0px"
              android:layout_height="match_parent"
              android:layout_weight="3"
              android:layout_marginRight="6dp"
              android:gravity="center_vertical|end"
              android:text="@string/resultView" />
		
		<LinearLayout 
		    android:id="@+id/plusMinus"
		    android:layout_height="fill_parent"
		    android:layout_width="0px"
		    android:layout_weight="2.1"
		    android:orientation="vertical"
		    android:visibility="gone">  
          <Button
              android:id="@+id/plus"
              style="?android:attr/buttonStyleSmall"
              android:layout_width="fill_parent"
              android:layout_height="0dp"
              android:layout_weight="1"
              android:background="@drawable/btn_green_holo_dark"
              android:gravity="center"
              android:layout_gravity="fill"
              android:text="@string/plus" />

          <Button
              android:id="@+id/minus"
              style="?android:attr/buttonStyleSmall"
              android:layout_width="fill_parent"
              android:layout_height="0dp"
              android:layout_weight="1"
              android:background="@drawable/btn_green_holo_dark"
              android:gravity="center"
              android:layout_gravity="fill"
              android:text="@string/minus" />
          
          </LinearLayout>
      </LinearLayout>

      <FrameLayout
          android:id="@+id/mapsLayout"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="0.49" >

          <ListView
              android:id="@+id/listDetails"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" >
          </ListView>

          <fragment
              android:id="@+id/hiddenMap"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              class="com.google.android.gms.maps.MapFragment" />
      </FrameLayout>
     
     
      <LinearLayout
          android:id="@+id/settings"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:visibility="gone" >

          <TextView
              android:id="@+id/settingsTitle"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:gravity="center_horizontal"
              android:text="@string/settings_title"
              android:textSize="20sp"
              android:textStyle="bold" />

           <ScrollView
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content">
        		<LinearLayout 
            		android:layout_width="match_parent"
            		android:layout_height="wrap_content"
           			android:orientation="vertical">
          			<LinearLayout
              			android:layout_width="match_parent"
              			android:layout_height="wrap_content"
              			android:layout_marginTop="15dp" >

              			<TextView
                  			android:id="@+id/intervalLabel"
                  			android:layout_width="0dp"
                  			android:layout_height="wrap_content"
                  			android:layout_weight="0.5"
                  			android:textAlignment="center"
                  			android:gravity="center"
                  			android:text="@string/tracking_interval"
                  			android:textAppearance="?android:attr/textAppearanceSmall" />

              			<TextView
                  			android:id="@+id/intervalValue"
                  			android:layout_width="0dp"
                  			android:layout_height="wrap_content"
                  			android:layout_weight="0.5"
                  			android:gravity="center"
                  			android:text="@string/tracking_interval_value"
                  			android:textAlignment="viewEnd"
                  			android:textAppearance="?android:attr/textAppearanceSmall" />

          			</LinearLayout>

          			<SeekBar
              			android:id="@+id/intervalBar"
              			android:layout_width="match_parent"
              			android:layout_height="wrap_content"
              			android:layout_marginTop="8dp"
              			android:layout_marginBottom="10dp"
              			android:max="60"
              			android:progress="30" />"

          			<LinearLayout 
		    			android:layout_width="match_parent"
		    			android:layout_height="wrap_content"
		    			android:layout_marginTop="10dp"
		    			android:layout_marginBottom="15dp" >
		    
		    			<TextView
		        			android:id="@+id/unit_label"
		        			android:layout_width="0dp"
		        			android:layout_height="wrap_content"
		        			android:layout_weight="0.5"
		        			android:textAlignment="viewStart"
		        			android:gravity="center"
		        			android:layout_gravity="center"
		        			android:text="@string/distance_unit" 
		        			android:textAppearance="?android:attr/textAppearanceSmall" />
		    
		    			<Spinner
              				android:id="@+id/unit_spinner"
              				android:layout_width="0dp"
              				android:layout_weight="0.5"
              				android:layout_height="wrap_content"
              				android:gravity="center"
              				android:textAlignment="viewEnd"
              				android:layout_gravity="center"
              				android:layout_marginLeft="10dp"
              				android:layout_marginRight="10dp" />
		    			
					</LinearLayout>
          
          			<TextView 
              			android:layout_width="match_parent"
              			android:layout_height="wrap_content"
              			android:layout_marginTop="10dp"
              			android:textAppearance="?android:attr/textAppearanceSmall"
              			android:gravity="center"
              			android:text="@string/version"
              			android:autoLink="web"/>
          			
          			<ImageView 
          			    android:contentDescription="@string/contentDescription"
          			    android:layout_width="match_parent"
          			    android:layout_height="wrap_content"
          			    android:src="@drawable/workbook_logo_white"
          			    android:layout_gravity="center_horizontal"/>
          
          			<Button
             			android:id="@+id/logoutButton"
              			android:layout_width="match_parent"
              			android:layout_height="wrap_content"
              			android:layout_marginTop="15dp"
              			android:background="@drawable/btn_red_holo_dark"
              			android:text="@string/logout" />
          		
          		</LinearLayout> 
          	</ScrollView>
      	</LinearLayout>
	 </LinearLayout>
 
  </merge>